@@ -2,11 +2,17 @@
 
 S3method(await,AsyncTask)
 S3method(await,BatchJobsAsyncTask)
+S3method(completed,AsyncListEnv)
+S3method(completed,AsyncTask)
 S3method(delete,AsyncTask)
 S3method(delete,BatchJobsAsyncTask)
 S3method(error,AsyncListEnv)
 S3method(error,AsyncTask)
 S3method(error,BatchJobsAsyncTask)
+S3method(expired,AsyncListEnv)
+S3method(expired,AsyncTask)
+S3method(failed,AsyncListEnv)
+S3method(failed,AsyncTask)
 S3method(finished,AsyncListEnv)
 S3method(finished,AsyncTask)
 S3method(getMessage,AsyncTaskError)
@@ -37,9 +43,12 @@ export(availableCores)
 export(await)
 export(backend)
 export(batchEvalQ)
+export(completed)
 export(delayedAsyncAssign)
 export(delete)
 export(error)
+export(expired)
+export(failed)
 export(finished)
 export(inspect)
 export(inspectAll)
