@@ -1,7 +1,10 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/AsyncTask.R
 \name{status}
+\alias{completed}
 \alias{error}
+\alias{expired}
+\alias{failed}
 \alias{finished}
 \alias{status}
 \alias{value}
